# amazon-nwlst-scraper

./: .gitignore  Dockerfile  README.md  batch_results_v3.json  config.json  config.py  http_scraper.py  input-m1-amz-nwlst-general.xlsx  main.py  pyproject.toml  seed_database_from_excel.py  version2.py  xpaths.json
layouts/: amazon.json
scripts/: json_to_csv.py  log_analysis.py
src/: errors.py  gsheet_interface.py  layout_loader.py  scraper.py
tests/: gsheets.py  layouts.py
